Fix behavior of preprocessor for sigle quotes

The distinction between single and double quotes is purly a command
shell issue. So silently convert to double quotes.
Also change escaping to QTs non-standard form for double quotes if
contained in single quotes.

BUG: 209885
FIXED-IN: 1.7